Corrige configuração do PostgreSQL e paths para deploy no Render

--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=gestao_stock
-PORT=5500
-JWT_SECRET=segredo_super_secreto
+DB_HOST=dpg-d1cgnbeuk2gs73an5dm0-a.oregon-postgres.render.com
+DB_USER=postgreesql_stock_user
+DB_PASSWORD=b9T3gSMaeUx1ySE3MdPyMH8LnhEC2dg0
+DB_NAME=postgreesql_stock
+PORT=5432
+DB_SSL =true
+JWT_SECRET=002771
 ADMIN_EMAIL=admin@email.com
 ADMIN_SENHA=002771
+DB_URL=postgresql://postgreesql_stock_user:b9T3gSMaeUx1ySE3MdPyMH8LnhEC2dg0@dpg-d1cgnbeuk2gs73an5dm0-a.oregon-postgres.render.com/postgreesql_stock
